# patient-registry-fastapi

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: dependencies.py  main.py  middleware.py
app/api/: patients.py
app/core/: constants.py  exception_handler.py  exceptions.py  logging.py  settings.py
app/db/: session.py
app/models/: __init__.py  base.py  file_upload.py  patient.py
app/repositories/: __init__.py  file_repository.py  patient_repository.py
app/schemas/: __init__.py  file_upload.py  patient.py
app/services/: __init__.py  email_client.py  errors.py  file_storage_service.py  notification_client.py  notification_client_factory.py  patient_service.py
migrations/: env.py
migrations/versions/: 2b524ab3f3d2_add_patients_and_files_tables.py
tests/: conftest.py
tests/api/: test_patients.py
tests/api/services/: test_notification_client_factory.py
