[project]
name = "prueba-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.8",
    "greenlet>=3.3.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]

[tool.ruff]
target-version = "py313"

extend-exclude = ["migrations/**"]

line-length = 120

[tool.ruff.lint]
extend-select = [
    "E","W","C90","I","N","D","UP","YTT","ANN","ASYNC","S","BLE","FBT","B","A","COM",
    "C4","DTZ","T10","DJ","EM","EXE","FA","ISC","ICN","LOG","G","INP","PIE","PYI",
    "PT","Q","RSE","RET","SLF","SLOT","SIM","TID","TC","INT","ARG","PTH","TD","FIX",
    "PD","PGH","PL","TRY","FLY","NPY","FAST","AIR","PERF","FURB","RUF",
]
ignore = [
    "E501",
    "D1",
    "FBT003",
    "D203",
    "D212",
    "D401",
    "S311",
    "PERF401",
    "RET504",
    "FA102",
    "TRY003",
    "EM101",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101","S105","S106","S107","PLR2004","SLF001","D","ANN","ARG001","PLC0415","EM102"]
"*_test.py" = ["S101","S105","S106","S107","PLR2004","SLF001","D","ANN","ARG001","PLC0415","EM102"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "testcontainers>=4.14.1",
    "ty>=0.0.16",
    "uvicorn>=0.40.0",
]

[tool.ty.src]
exclude = [
    "migrations/**"
]

[tool.coverage.run]
omit = [
    "migrations/*",
    "migrations/env.py",
    "app/main.py",
    "tests/*",
    "app/core/logging.py",
    "app/db/session.py",
]
source = ["app"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2
omit = [
    "migrations/*",
    "migrations/env.py",
    "app/main.py",
    "tests/*",
    "app/core/logging.py",
    "app/db/session.py",
]
